--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -31,6 +31,11 @@
   text-overflow: ellipsis;
 }
 
+.wrapping {
+  text-wrap: normal;
+  white-space: normal;
+}
+
 .centered {
   text-align: center;
   justify-content: center;
