Config views: more editable fields, various fixes.

--- a/src/sass/widgets/_list.scss
+++ b/src/sass/widgets/_list.scss
@@ -151,6 +151,9 @@
       .s {
         width: 1em;
       }
+      .clickable {
+        margin-left: 0.25em;
+      }
     } // .btns
 
     // Default view: 3 columns
