--- a/src/sass/zico.scss
+++ b/src/sass/zico.scss
@@ -13,6 +13,7 @@ $c-text:   #aaa;  // Normal text
 $c-line:   #888;  // Lines and separators / darkened text
 $c-light:  #ddd;    // Highlighted text
 $c-darker: #888;    // Darker text
+$c-dark:   #444;  // dark text
 $b-light:  #333;    // Lighter background
 $b-normal: #222;    // Normal background
 $b-darker: #181818; // Darker background
