Trace tree: indicate percentage of time spent at each method.

--- a/src/sass/zico.scss
+++ b/src/sass/zico.scss
@@ -30,6 +30,12 @@ $c-yellow: yellow;
 $c-white:  white;
 $c-black:  black;
 
+$c-pct0: #aaa;
+$c-pct1: #c99;
+$c-pct2: #d66;
+$c-pct3: #e33;
+$c-pct4: #f00;
+
 @import "colors";
 @import "common";
 
