--- a/src/sass/views/_trace.scss
+++ b/src/sass/views/_trace.scss
@@ -78,15 +78,22 @@
     .t {
       min-width: 3em;
       max-width: 3em;
-      text-align: right;
+      text-align: center;
       margin-right: 0.5em;
     } // .t
+    .p {
+      min-width: 3em;
+      max-width: 3em;
+      text-align: center;
+      margin-right: 0.5em;
+    }
     .ti {
       display: flex;
-      min-width: 5em;
-      max-width: 5em;
+      min-width: 10em;
+      max-width: 10em;
       margin-right: 0.5em;
       text-align: center;
+      white-space: nowrap;
       .svg-icon {
         padding-right: 0.5em;
       }
