Some tinkering around trace filtering UI.

--- a/src/sass/views/_trace.scss
+++ b/src/sass/views/_trace.scss
@@ -137,6 +137,7 @@
       font-weight: bold;
       color: $c-blue;
       padding-right: 0.5em;
+      margin-left: 0.5em;
       flex-grow: 0;
       flex-shrink: 0;
     }
