Forms: various fixes. Basic form validation.

--- a/src/sass/widgets/_form.scss
+++ b/src/sass/widgets/_form.scss
@@ -31,8 +31,8 @@
 
 
   .error {
-    color: $c-red;
-    border: 1px solid $c-red;
+    color: $c-red !important;
+    border: 1px solid $c-red !important;
   }
 
   .select {
