--- a/src/sass/zico.scss
+++ b/src/sass/zico.scss
@@ -29,6 +29,14 @@ $c-gray:   gray;
 $c-yellow: yellow;
 $c-white:  white;
 $c-black:  black;
+$c-darkgreen: darkgreen;
+$c-darkred: darkred;
+$c-darkblue: darkblue;
+$c-darkkhaki: darkkhaki;
+
+$c-mediumblue: mediumblue;
+$c-steelblue: steelblue;
+$c-mediumred: firebrick;
 
 $c-pct0: #aaa;
 $c-pct1: #c99;
